# v2x-xapp

./: README.md
setup/: Dockerfile_build_xapp_base_xapp-base
setup-scripts/: create-new-xapp.sh  gdb.txt  setup-xapp-base.sh  setup-xapp.sh  start-xapp-ns-o-ran.sh
setup/v2x-xapp/: Dockerfile  millicar_optimization.py
setup/xapp-sm-connector/: CMakeLists.txt  README  ric_message_sl.sh  run_xapp.sh
setup/xapp-sm-connector/asn1c_defs/: Buffer-String.c  Buffer-String.h  MeasurementValue.c  MeasurementValue.h  V2X-Scheduling-All-Users.c  V2X-Scheduling-All-Users.h  V2X-Scheduling-Source.c  V2X-Scheduling-User.c  V2X-Scheduling-User.h  V2X-Single-User-report.c  V2X-Single-User-report.h  V2XAllBufferPacketDelays.c  V2XAllBufferPacketDelays.h  V2XAllUsersBufferDelayReports.c  V2XBufferPacketDelays.c  V2XBufferPacketDelays.h  V2XHarqBufferSize.c  V2XId.c  V2XPacketDelayInterval.c  V2XPacketDelayInterval.h  V2XSciMessageItem-List.c  V2XSciMessageItem-List.h  V2XSciMessageItem.c  V2XSciMessageItem.h
setup/xapp-sm-connector/init/: init_script.py
setup/xapp-sm-connector/src/: Makefile  agent_connector.cc  agent_connector.hpp  hw_xapp_main.cc  xapp.cc  xapp.hpp
setup/xapp-sm-connector/src/ns3_decode/: CMakeLists.txt  buffer.cc  buffer.h  chunk.cc  chunk.h  command.txt  fatal-impl.cc  fatal-impl.h  header.cc  header.h  log.h  nr-sl-mac-pdu-tag.cc  nr-sl-mac-pdu-tag.h  nr-sl-phy-mac-common.cc  nr-sl-phy-mac-common.h  nr-sl-sci-f1a-header.cc  nr-sl-sci-f1a-header.h  sfnsf.cc  sfnsf.h  sl-mac-pdu-tag.pb.cc  sl-mac-pdu-tag.proto  sl-sci-f1a-header.pb.cc  sl-sci-msg.pb.cc  sl-sci-msg.pb.h  sl-sci-msg.proto  sl-sfnsf.pb.h  sl-sfnsf.proto  sl-slot-alloc.pb.h  sl-slot-alloc.proto  sl_sci_msg_pb2.py  sl_sfnsf_pb2.py  tag-buffer.cc  tag-buffer.cc1.txt  tag-buffer.h  tag-buffer.h1.txt  tag.cc  tag.h
setup/xapp-sm-connector/src/ns3_decode/proto/: sl-mac-pdu-tag.pb.cc  sl-mac-pdu-tag.pb.h  sl-mac-pdu-tag.proto  sl-sci-f1a-header.pb.cc  sl-sci-f1a-header.pb.h  sl-sci-f1a-header.proto  sl-sci-msg.proto  sl-sfnsf.pb.cc  sl-sfnsf.pb.h  sl-slot-alloc.pb.cc  sl-slot-alloc.pb.h  sl-slot-alloc.proto  sl_mac_pdu_tag_pb2.py  sl_slot_alloc_pb2.py
setup/xapp-sm-connector/src/xapp-mgmt/: msgs_proc.cc  subs_mgmt.cc
setup/xapp-sm-connector/src/xapp-utils/: xapp_config.cc  xapp_config.hpp  xapp_rmr.hpp
setup/xapp-sm-connector/src/xapp_ric_control/: CMakeLists.txt  E2SM-RC-ControlMessage.c  E2SM-RC-ControlMessage.h  all_handovers.h  all_handovers_plmn.h  cell_handovers_list.cc  cell_handovers_list.h  control_message_encoder_decoder.cc  control_message_encoder_decoder.h  handover_item.h  handover_list.cc  handover_list.h  v2x-scheduling-plmn.cc  v2x-scheduling-plmn.h
setup/xapp-sm-connector/test/: Makefile  decode_e2ap_pdu_test.cc  decoding_test.cc  hw_unit_tests.cc  protobuf_test.cc  rebuild_xapp.sh  run_cmd.py  v2x_scheduling_test.cc
setup/xapp-v2x/: Dockerfile  Dockerfile_build_xapp_base  ctrl_msg_encoder_decoder.py  run_xapp_multi_sim.py  run_xapp_parallel.py  same_slot_repeat_run_xapp_parallel.py  sl_sci_f1a_header_pb2.py  sl_slot_validation.py  transform_xml_to_dict_v2x.py  v2x_optimization.py  v2x_optimization_copy.py  v2x_pre_optimize.py  v2x_ric_message_format.py  xapp_control.py
setup/xapp-v2x/data/: data.xml  data1.xml  data_ctrl.xml
